Make sure we can use real html in the template

--- a/starter/templates/index.html
+++ b/starter/templates/index.html
@@ -2,7 +2,6 @@
 <html>
   <title>{{ .SiteTitle }}</title>
   <head></head>
-  <body>
-    {{template "body"}}
+  <body>{{template "body" .}}
   </body>
 </html>
