Starter template updated and README update

--- a/starter/templates/index.html
+++ b/starter/templates/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
-  <title>{{ .SiteTitle }}</title>
+  <title>{{template "site-title" .}}</title>
   <head></head>
-  <body>{{template "body" .}}
+  <body>
+    <h1>My Solarwind Site</h1>
+    {{template "body" .}}
   </body>
 </html>
